syntax = "proto3";

package rivet.backend.pkg.upload.list_for_user;

import "legacy/proto/common.proto";
import "legacy/proto/backend/upload.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
	optional int64 anchor = 2;
	uint32 limit = 3;
}

message Response {
	message User {
		rivet.common.Uuid user_id = 1;
		repeated rivet.common.Uuid upload_ids = 2;
		optional int64 anchor = 3;
	}

	repeated User users = 1;
}
